--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@popperjs/core": "^2.11.2",
     "@types/datatables.net": "^1.10.21",
     "@types/jquery": "^3.5.13",
     "angular-datatables": "^13.0.1",
+    "bootstrap": "^5.1.3",
     "datatables.net": "^1.11.4",
     "datatables.net-dt": "^1.11.4",
     "igniteui-angular": "^12.3.13",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.4",
     "tslib": "^2.3.1",
     "yarn": "^1.22.17",
